--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 more_itertools
 numpy
-tensorboardX
-torch
-tqdm
+optuna
 pytest
 pyyaml
+tensorboardX
+torch
+torch_optimizer
+tqdm
 wandb
-git+https://github.com/Hiroshiba/pytorch-trainer@1.3.1
 git+https://github.com/Hiroshiba/acoustic_feature_extractor
+git+https://github.com/Hiroshiba/pytorch-trainer@1.3.1
