--- a/tests/data/train_config.yaml
+++ b/tests/data/train_config.yaml
@@ -6,6 +6,7 @@ dataset:
   silence_glob: "/path/to/silence/*.npy"
   phoneme_list_glob: "/path/to/phoneme_list/*.lab"
   f0_process_mode: normal
+  time_mask_max_second: 0
   speaker_dict_path: "/path/to/speaker_dict_path.json"
   num_speaker: 100
   test_num: 100
